--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/node": "22.10.2",
     "@types/react": "19.0.2",
     "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.1",
     "typescript": "5.7.2"
   }
