--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.2",
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-spinners": "^0.15.0"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
