--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,9 +11,9 @@
   "dependencies": {
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
-    "next": "14.2.18",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "15.1.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
     "react-spinners": "^0.15.0"
   },
@@ -25,5 +25,8 @@
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.1",
     "typescript": "5.7.2"
+  },
+  "overrides": {
+    "@types/react": "19.0.2"
   }
 }
